aio_labels.py

RecorderTms570AioNodeToRecorderTms570Label = _libraries['avionics/network/_aio_labels.so'].RecorderTms570AioNodeToRecorderTms570Label
RecorderTms570AioNodeToRecorderTms570Label.restype = RecorderTms570Label
RecorderTms570AioNodeToRecorderTms570Label.argtypes = [AioNode]
ServoLabelToServoAioNode = _libraries['avionics/network/_aio_labels.so'].ServoLabelToServoAioNode
ServoLabelToServoAioNode.restype = AioNode
ServoLabelToServoAioNode.argtypes = [ServoLabel]
ServoAioNodeToServoLabel = _libraries['avionics/network/_aio_labels.so'].ServoAioNodeToServoLabel
ServoAioNodeToServoLabel.restype = ServoLabel
ServoAioNodeToServoLabel.argtypes = [AioNode]
ShortStackLabelToShortStackAioNode = _libraries['avionics/network/_aio_labels.so'].ShortStackLabelToShortStackAioNode
ShortStackLabelToShortStackAioNode.restype = AioNode
ShortStackLabelToShortStackAioNode.argtypes = [ShortStackLabel]
ShortStackAioNodeToShortStackLabel = _libraries['avionics/network/_aio_labels.so'].ShortStackAioNodeToShortStackLabel
ShortStackAioNodeToShortStackLabel.restype = ShortStackLabel
ShortStackAioNodeToShortStackLabel.argtypes = [AioNode]
SimulatedJoystickLabelToSimulatedJoystickAioNode = _libraries['avionics/network/_aio_labels.so'].SimulatedJoystickLabelToSimulatedJoystickAioNode
SimulatedJoystickLabelToSimulatedJoystickAioNode.restype = AioNode
SimulatedJoystickLabelToSimulatedJoystickAioNode.argtypes = [SimulatedJoystickLabel]
SimulatedJoystickAioNodeToSimulatedJoystickLabel = _libraries['avionics/network/_aio_labels.so'].SimulatedJoystickAioNodeToSimulatedJoystickLabel
SimulatedJoystickAioNodeToSimulatedJoystickLabel.restype = SimulatedJoystickLabel
SimulatedJoystickAioNodeToSimulatedJoystickLabel.argtypes = [AioNode]
SimulatorLabelToSimulatorAioNode = _libraries['avionics/network/_aio_labels.so'].SimulatorLabelToSimulatorAioNode
SimulatorLabelToSimulatorAioNode.restype = AioNode
SimulatorLabelToSimulatorAioNode.argtypes = [SimulatorLabel]
SimulatorAioNodeToSimulatorLabel = _libraries['avionics/network/_aio_labels.so'].SimulatorAioNodeToSimulatorLabel
SimulatorAioNodeToSimulatorLabel.restype = SimulatorLabel
SimulatorAioNodeToSimulatorLabel.argtypes = [AioNode]
TelemetrySnapshotLabelToTelemetrySnapshotAioNode = _libraries['avionics/network/_aio_labels.so'].TelemetrySnapshotLabelToTelemetrySnapshotAioNode
TelemetrySnapshotLabelToTelemetrySnapshotAioNode.restype = AioNode
TelemetrySnapshotLabelToTelemetrySnapshotAioNode.argtypes = [TelemetrySnapshotLabel]
TelemetrySnapshotAioNodeToTelemetrySnapshotLabel = _libraries['avionics/network/_aio_labels.so'].TelemetrySnapshotAioNodeToTelemetrySnapshotLabel
TelemetrySnapshotAioNodeToTelemetrySnapshotLabel.restype = TelemetrySnapshotLabel
TelemetrySnapshotAioNodeToTelemetrySnapshotLabel.argtypes = [AioNode]
TorqueCellLabelToTorqueCellAioNode = _libraries['avionics/network/_aio_labels.so'].TorqueCellLabelToTorqueCellAioNode
TorqueCellLabelToTorqueCellAioNode.restype = AioNode
TorqueCellLabelToTorqueCellAioNode.argtypes = [TorqueCellLabel]
TorqueCellAioNodeToTorqueCellLabel = _libraries['avionics/network/_aio_labels.so'].TorqueCellAioNodeToTorqueCellLabel
TorqueCellAioNodeToTorqueCellLabel.restype = TorqueCellLabel
TorqueCellAioNodeToTorqueCellLabel.argtypes = [AioNode]
UwbLabelToUwbAioNode = _libraries['avionics/network/_aio_labels.so'].UwbLabelToUwbAioNode
UwbLabelToUwbAioNode.restype = AioNode
UwbLabelToUwbAioNode.argtypes = [UwbLabel]
UwbAioNodeToUwbLabel = _libraries['avionics/network/_aio_labels.so'].UwbAioNodeToUwbLabel
UwbAioNodeToUwbLabel.restype = UwbLabel
UwbAioNodeToUwbLabel.argtypes = [AioNode]
VisualizerLabelToVisualizerAioNode = _libraries['avionics/network/_aio_labels.so'].VisualizerLabelToVisualizerAioNode
VisualizerLabelToVisualizerAioNode.restype = AioNode
VisualizerLabelToVisualizerAioNode.argtypes = [VisualizerLabel]
VisualizerAioNodeToVisualizerLabel = _libraries['avionics/network/_aio_labels.so'].VisualizerAioNodeToVisualizerLabel
VisualizerAioNodeToVisualizerLabel.restype = VisualizerLabel
VisualizerAioNodeToVisualizerLabel.argtypes = [AioNode]
BattLabelToString = _libraries['avionics/network/_aio_labels.so'].BattLabelToString
BattLabelToString.restype = POINTER_T(ctypes.c_char)
BattLabelToString.argtypes = [BattLabel]
CmdLabelToString = _libraries['avionics/network/_aio_labels.so'].CmdLabelToString
CmdLabelToString.restype = POINTER_T(ctypes.c_char)
CmdLabelToString.argtypes = [CmdLabel]
ControllerLabelToString = _libraries['avionics/network/_aio_labels.so'].ControllerLabelToString
ControllerLabelToString.restype = POINTER_T(ctypes.c_char)
ControllerLabelToString.argtypes = [ControllerLabel]
CoreSwitchLabelToString = _libraries['avionics/network/_aio_labels.so'].CoreSwitchLabelToString
CoreSwitchLabelToString.restype = POINTER_T(ctypes.c_char)
CoreSwitchLabelToString.argtypes = [CoreSwitchLabel]
DrumLabelToString = _libraries['avionics/network/_aio_labels.so'].DrumLabelToString
DrumLabelToString.restype = POINTER_T(ctypes.c_char)
DrumLabelToString.argtypes = [DrumLabel]
DynoMotorLabelToString = _libraries['avionics/network/_aio_labels.so'].DynoMotorLabelToString
DynoMotorLabelToString.restype = POINTER_T(ctypes.c_char)
DynoMotorLabelToString.argtypes = [DynoMotorLabel]
EopLabelToString = _libraries['avionics/network/_aio_labels.so'].EopLabelToString
EopLabelToString.restype = POINTER_T(ctypes.c_char)
EopLabelToString.argtypes = [EopLabel]
FlightComputerLabelToString = _libraries['avionics/network/_aio_labels.so'].FlightComputerLabelToString
FlightComputerLabelToString.restype = POINTER_T(ctypes.c_char)
FlightComputerLabelToString.argtypes = [FlightComputerLabel]
GpsLabelToString = _libraries['avionics/network/_aio_labels.so'].GpsLabelToString
GpsLabelToString.restype = POINTER_T(ctypes.c_char)
GpsLabelToString.argtypes = [GpsLabel]
GroundPowerQ7LabelToString = _libraries['avionics/network/_aio_labels.so'].GroundPowerQ7LabelToString
GroundPowerQ7LabelToString.restype = POINTER_T(ctypes.c_char)
GroundPowerQ7LabelToString.argtypes = [GroundPowerQ7Label]
GroundPowerTms570LabelToString = _libraries['avionics/network/_aio_labels.so'].GroundPowerTms570LabelToString
GroundPowerTms570LabelToString.restype = POINTER_T(ctypes.c_char)
GroundPowerTms570LabelToString.argtypes = [GroundPowerTms570Label]
GsEstimatorLabelToString = _libraries['avionics/network/_aio_labels.so'].GsEstimatorLabelToString
GsEstimatorLabelToString.restype = POINTER_T(ctypes.c_char)
GsEstimatorLabelToString.argtypes = [GsEstimatorLabel]
JoystickLabelToString = _libraries['avionics/network/_aio_labels.so'].JoystickLabelToString
JoystickLabelToString.restype = POINTER_T(ctypes.c_char)
JoystickLabelToString.argtypes = [JoystickLabel]
LightLabelToString = _libraries['avionics/network/_aio_labels.so'].LightLabelToString
LightLabelToString.restype = POINTER_T(ctypes.c_char)
LightLabelToString.argtypes = [LightLabel]
LoadcellNodeLabelToString = _libraries['avionics/network/_aio_labels.so'].LoadcellNodeLabelToString
LoadcellNodeLabelToString.restype = POINTER_T(ctypes.c_char)
LoadcellNodeLabelToString.argtypes = [LoadcellNodeLabel]
MotorLabelToString = _libraries['avionics/network/_aio_labels.so'].MotorLabelToString
MotorLabelToString.restype = POINTER_T(ctypes.c_char)
MotorLabelToString.argtypes = [MotorLabel]
MvlvLabelToString = _libraries['avionics/network/_aio_labels.so'].MvlvLabelToString
MvlvLabelToString.restype = POINTER_T(ctypes.c_char)
MvlvLabelToString.argtypes = [MvlvLabel]
OperatorLabelToString = _libraries['avionics/network/_aio_labels.so'].OperatorLabelToString
OperatorLabelToString.restype = POINTER_T(ctypes.c_char)
OperatorLabelToString.argtypes = [OperatorLabel]
PlatformLabelToString = _libraries['avionics/network/_aio_labels.so'].PlatformLabelToString
PlatformLabelToString.restype = POINTER_T(ctypes.c_char)
PlatformLabelToString.argtypes = [PlatformLabel]
PlcGs02LabelToString = _libraries['avionics/network/_aio_labels.so'].PlcGs02LabelToString
PlcGs02LabelToString.restype = POINTER_T(ctypes.c_char)
PlcGs02LabelToString.argtypes = [PlcGs02Label]
PlcTophatLabelToString = _libraries['avionics/network/_aio_labels.so'].PlcTophatLabelToString
PlcTophatLabelToString.restype = POINTER_T(ctypes.c_char)
PlcTophatLabelToString.argtypes = [PlcTophatLabel]
RecorderQ7LabelToString = _libraries['avionics/network/_aio_labels.so'].RecorderQ7LabelToString
RecorderQ7LabelToString.restype = POINTER_T(ctypes.c_char)
RecorderQ7LabelToString.argtypes = [RecorderQ7Label]
RecorderTms570LabelToString = _libraries['avionics/network/_aio_labels.so'].RecorderTms570LabelToString
RecorderTms570LabelToString.restype = POINTER_T(ctypes.c_char)
RecorderTms570LabelToString.argtypes = [RecorderTms570Label]
ServoLabelToString = _libraries['avionics/network/_aio_labels.so'].ServoLabelToString
ServoLabelToString.restype = POINTER_T(ctypes.c_char)
ServoLabelToString.argtypes = [ServoLabel]
ShortStackLabelToString = _libraries['avionics/network/_aio_labels.so'].ShortStackLabelToString
ShortStackLabelToString.restype = POINTER_T(ctypes.c_char)
ShortStackLabelToString.argtypes = [ShortStackLabel]
SimulatedJoystickLabelToString = _libraries['avionics/network/_aio_labels.so'].SimulatedJoystickLabelToString
SimulatedJoystickLabelToString.restype = POINTER_T(ctypes.c_char)
SimulatedJoystickLabelToString.argtypes = [SimulatedJoystickLabel]
SimulatorLabelToString = _libraries['avionics/network/_aio_labels.so'].SimulatorLabelToString
SimulatorLabelToString.restype = POINTER_T(ctypes.c_char)
SimulatorLabelToString.argtypes = [SimulatorLabel]
TelemetrySnapshotLabelToString = _libraries['avionics/network/_aio_labels.so'].TelemetrySnapshotLabelToString
TelemetrySnapshotLabelToString.restype = POINTER_T(ctypes.c_char)
TelemetrySnapshotLabelToString.argtypes = [TelemetrySnapshotLabel]
TorqueCellLabelToString = _libraries['avionics/network/_aio_labels.so'].TorqueCellLabelToString
TorqueCellLabelToString.restype = POINTER_T(ctypes.c_char)
TorqueCellLabelToString.argtypes = [TorqueCellLabel]
UwbLabelToString = _libraries['avionics/network/_aio_labels.so'].UwbLabelToString
UwbLabelToString.restype = POINTER_T(ctypes.c_char)
UwbLabelToString.argtypes = [UwbLabel]
VisualizerLabelToString = _libraries['avionics/network/_aio_labels.so'].VisualizerLabelToString
VisualizerLabelToString.restype = POINTER_T(ctypes.c_char)
VisualizerLabelToString.argtypes = [VisualizerLabel]
__STDBOOL_H = True
true = 1
false = 0
__bool_true_false_are_defined = 1
AVIONICS_NETWORK_AIO_NODE_H_ = True
AioNodeToString = _libraries['avionics/network/_aio_labels.so'].AioNodeToString
AioNodeToString.restype = POINTER_T(ctypes.c_char)
AioNodeToString.argtypes = [AioNode]
AioNodeToShortString = _libraries['avionics/network/_aio_labels.so'].AioNodeToShortString
AioNodeToShortString.restype = POINTER_T(ctypes.c_char)
AioNodeToShortString.argtypes = [AioNode]
StringToAioNode = _libraries['avionics/network/_aio_labels.so'].StringToAioNode
StringToAioNode.restype = AioNode
StringToAioNode.argtypes = [POINTER_T(ctypes.c_char)]
IsQ7Node = _libraries['avionics/network/_aio_labels.so'].IsQ7Node
IsQ7Node.restype = ctypes.c_bool
IsQ7Node.argtypes = [AioNode]
IsTms570Node = _libraries['avionics/network/_aio_labels.so'].IsTms570Node
IsTms570Node.restype = ctypes.c_bool
IsTms570Node.argtypes = [AioNode]
IsValidNode = _libraries['avionics/network/_aio_labels.so'].IsValidNode
IsValidNode.restype = ctypes.c_bool
IsValidNode.argtypes = [AioNode]
IsRemoteCommandNode = _libraries['avionics/network/_aio_labels.so'].IsRemoteCommandNode
IsRemoteCommandNode.restype = ctypes.c_bool
IsRemoteCommandNode.argtypes = [AioNode]
IsWingNode = _libraries['avionics/network/_aio_labels.so'].IsWingNode
IsWingNode.restype = ctypes.c_bool
IsWingNode.argtypes = [AioNode]
IsGroundStationNode = _libraries['avionics/network/_aio_labels.so'].IsGroundStationNode
IsGroundStationNode.restype = ctypes.c_bool
IsGroundStationNode.argtypes = [AioNode]
IsTestFixtureNode = _libraries['avionics/network/_aio_labels.so'].IsTestFixtureNode
IsTestFixtureNode.restype = ctypes.c_bool
